[gd_scene load_steps=6 format=3 uid="uid://cyojwaxwd6fq3"]

[ext_resource type="Script" uid="uid://c4anjbsk0f2fc" path="res://Scenes/Draggable/id_card.gd" id="1_wybq7"]
[ext_resource type="Texture2D" uid="uid://cdumeuqlhl248" path="res://dialog/IDCards/ID.jpg" id="1_xcexy"]

[sub_resource type="LabelSettings" id="LabelSettings_wybq7"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_28jo6"]
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28jo6"]
size = Vector2(608, 361)

[node name="IdCard" type="RigidBody2D"]
input_pickable = true
lock_rotation = true
freeze_mode = 1
script = ExtResource("1_wybq7")

[node name="CardImage" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_xcexy")

[node name="name" type="Label" parent="."]
offset_left = 11.0
offset_top = -31.0
offset_right = 279.0
offset_bottom = 11.0
scale = Vector2(0.5, 0.5)
text = "Bellamy A Robinson"
label_settings = SubResource("LabelSettings_wybq7")

[node name="dob" type="Label" parent="."]
offset_left = 2.0
offset_right = 110.0
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
text = "28"
label_settings = SubResource("LabelSettings_wybq7")

[node name="disorder" type="Label" parent="."]
offset_left = 108.0
offset_top = 27.0
offset_right = 154.0
offset_bottom = 66.0
scale = Vector2(0.5, 0.5)
text = "Yes"
label_settings = SubResource("LabelSettings_28jo6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -0.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_28jo6")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-4, -3.00001)
scale = Vector2(16.3, 10.7)
enable_node_path = NodePath("")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
